--- a/Exercises/W10_Exercise/Employee/Employee.vcxproj
+++ b/Exercises/W10_Exercise/Employee/Employee.vcxproj
@@ -128,10 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Employee.c" />
+    <ClCompile Include="List.c" />
+    <ClCompile Include="Node.c" />
     <ClCompile Include="Source.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h" />
+    <ClInclude Include="List.h" />
+    <ClInclude Include="Node.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Employee.txt" />
