--- a/Exercises/W10_Exercise/Employee/Employee.vcxproj.filters
+++ b/Exercises/W10_Exercise/Employee/Employee.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="Employee.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Node.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="List.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="List.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
